// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DraggableMenu component edit render correctly 1`] = `
<div
  className="DraggableMenu"
>
  <Menu
    className=""
    focusable={false}
    prefixCls="ant-menu"
    theme="light"
  >
    <MenuItem
      key="back"
      onClick={[Function]}
    >
      <Icon
        theme="outlined"
        type="arrow-left"
      />
      <span>
        保存并返回
      </span>
    </MenuItem>
    <SubMenu
      title={
        <span>
          <Icon
            theme="outlined"
            type="retweet"
          />
          <span>
            样式选择
          </span>
        </span>
      }
    >
      <MenuItem
        key="shellStyle0"
        onClick={[Function]}
      >
        <div
          style={
            Object {
              "background": "blue",
              "display": "inline-block",
              "height": 10,
              "marginRight": 10,
              "width": 10,
            }
          }
        />
        <span
          style={
            Object {
              "userSelect": "none",
            }
          }
        >
          蓝色
        </span>
      </MenuItem>
    </SubMenu>
  </Menu>
  <Menu
    className=""
    focusable={false}
    mode="inline"
    onClick={[Function]}
    onOpenChange={[MockFunction]}
    openKeys={
      Array [
        "all",
      ]
    }
    prefixCls="ant-menu"
    selectedKeys={
      Array [
        "dragMenuItemall",
      ]
    }
    theme="light"
  >
    <SubMenu
      key="all"
      title={
        <span>
          <Icon
            theme="outlined"
            type="laptop"
          />
          <span>
            全部
          </span>
        </span>
      }
    >
      <DragMenuItem
        item={
          Object {
            "group": "all",
            "groupName": "全部",
            "key": "all",
            "order": 0,
            "style": Object {},
            "text": "全部",
          }
        }
        key="dragMenuItemall"
      />
    </SubMenu>
  </Menu>
</div>
`;

exports[`DraggableMenu module edit render correctly 1`] = `
<div
  className="DraggableMenu"
>
  <Menu
    className=""
    focusable={false}
    mode="inline"
    onClick={[Function]}
    onOpenChange={[MockFunction]}
    openKeys={
      Array [
        "all",
      ]
    }
    prefixCls="ant-menu"
    selectedKeys={
      Array [
        "dragMenuItemall",
      ]
    }
    theme="light"
  >
    <MenuItem
      key="back"
      onClick={[Function]}
    >
      <Icon
        theme="outlined"
        type="arrow-left"
      />
      <span>
        首页
      </span>
    </MenuItem>
    <SubMenu
      key="all"
      title={
        <span>
          <Icon
            theme="outlined"
            type="laptop"
          />
          <span>
            全部
          </span>
        </span>
      }
    >
      <DragMenuItem
        item={
          Object {
            "group": "all",
            "groupName": "全部",
            "key": "all",
            "order": 0,
            "style": Object {},
            "text": "全部",
          }
        }
        key="dragMenuItemall"
      />
    </SubMenu>
  </Menu>
</div>
`;
